samples/_failures_safe/1761078362_321f98_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a82f12ac.c: In function ‘main’:
./samples/SAFE/__tmp_a82f12ac.c:186:33: error: expected ‘)’ at end of input
  186 |         switch (sm.current_state
      |                ~                ^
      |                                 )
./samples/SAFE/__tmp_a82f12ac.c:186:9: error: expected declaration or statement at end of input
  186 |         switch (sm.current_state
      |         ^~~~~~
./samples/SAFE/__tmp_a82f12ac.c:186:9: error: expected declaration or statement at end of input
